<resources>
    <string name="app_name">MyMessenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_text">Войти с помощью email</string>
    <string name="email_text">Электронная почта</string>
    <string name="password_text">Пароль</string>
    <string name="signin">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="send">Отправить</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_exit">Выйти</string>
    <string name="user">User</string>
    <string name="chats_tl">Чаты</string>
    <string name="users_tl">Пользователи</string>
    <string name="search">Поиск</string>
    <string name="name">Имя</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="received">Отправлено</string>
    <string name="last_message">Последнее сообщение</string>
    <string name="sent">Отправлено</string>
    <string name="image_name">Название картинки</string>
    <string name="email">Email</string>
    <string name="surname">Фамилия</string>
    <string name="role">Род занятий</string>
    <string name="address">Адрес</string>
    <string name="age">Возраст</string>
    <string name="save">Сохранить</string>
    <string name="verify">Не верифицирован</string>
    <string name="enter_phone">Введите свой номер</string>
    <string name="apply">Применить</string>
    <string name="id">Индентификатор</string>
    <string name="phone_number">Номер телефона</string>
    <string name="call">Позвонить</string>
    <string name="send_sms">Отправить SMS</string>
    <string name="visit_profile">Посетить профиль</string>

    <string-array name="country_codes">
        <item>+7</item>
        <item>+375</item>
        <item>+998</item>
    </string-array>

    <array name="country_flags">
        <item>@drawable/russia</item>
        <item>@drawable/belarus</item>
        <item>@drawable/uzbekistan</item>
    </array>

</resources>