<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".LoginFragment">

    <LinearLayout
        android:id="@+id/signInLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.lottiefiles.dotlottie.core.widget.DotLottieAnimation
            android:id="@+id/lottie_user"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <EditText
            android:id="@+id/emailSignInET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="emailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/hint_color"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwordSignInET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/hint_color"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInLL" />

    <Button
        android:id="@+id/signInBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttons"
        android:drawableLeft="@drawable/ic_login"
        android:drawablePadding="50dp"
        android:text="@string/signin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTV" />

    <TextView
        android:id="@+id/noAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBTN" />

    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noAccountTV" />

</androidx.constraintlayout.widget.ConstraintLayout>