<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mediumPurple"
        android:title="@string/app_name"
        android:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainTabLayoutTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabIndicatorColor="@color/mediumPurple"
        app:tabIndicatorHeight="@dimen/_4dp"
        app:tabIndicatorFullWidth="true"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/CustomTabText">
        
     <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chats_tl" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/users_tl"/>
        
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/fragmentsFL"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTabLayoutTL" />

</androidx.constraintlayout.widget.ConstraintLayout>