<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".fragments.SignUpFragment">

    <LinearLayout
        android:id="@+id/registerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailRegisterET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="emailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/hint_color"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwordRegisterET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/hint_color"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwordConfirmET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/hint_color"
            android:textSize="24sp" />

        <Button
            android:id="@+id/signUpBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttons"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="50dp"
            android:text="@string/sign_up"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/redirectLoginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Уже имеется аккаунт? Войти"
            android:layout_gravity="center"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>