<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleChatFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mediumPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:title=" "
        app:titleTextColor="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chatAvatarIV"
            android:src="@drawable/ic_person"
            app:civ_circle_background_color="@color/white"
            android:layout_width="@dimen/avatar_icon"
            android:layout_height="@dimen/avatar_icon" />

        <TextView
            android:id="@+id/chatTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40dp"
            android:text="@string/name"
            android:textSize="@dimen/_25sp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_25dp"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messagesRV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_margin="@dimen/_4dp"
        app:layout_constraintBottom_toTopOf="@+id/isSendTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/attachImageIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_attach_file"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editMessageET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_message"
        android:padding="13dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendMessageIB"
        app:layout_constraintStart_toEndOf="@+id/attachImageIB" />

    <TextView
        android:id="@+id/isSendTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/sent"
        android:textSize="11sp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editMessageET"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/sendMessageIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_send"
        app:backgroundTint="@android:color/transparent"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/editMessageET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editMessageET" />


</androidx.constraintlayout.widget.ConstraintLayout>